--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -1,1 +1,10 @@
-/* Desenvolva sua estilização aqui... */
+.page-wrapper {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    display: flex;
+    justify-content: space-between;
+    gap: 4rem;
+}
+
+
+
