--- a/styles/globalStyles.css
+++ b/styles/globalStyles.css
@@ -11,6 +11,14 @@ img {
   max-width: 100%;
 }
 
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
 :root {
   --color-brand-1: #6741D9;
   --color-brand-2: #5F3DC4;
@@ -20,6 +28,8 @@ img {
   --color-grey-4:  #e9ecef;
   --color-grey-5:  #f1f3f5;
   --color-grey-6:  #ffffff;
+  --opacity-1: rgba(0, 0, 0, 0.7);
+
   --radius-default: 0.5rem;
 
   --title-1: 3rem;
@@ -35,6 +45,7 @@ img {
 
 body {
   font-family: "Poppins", sans-serif;
+  background-color: var(--color-grey-3);
 }
 
 .container {
@@ -52,4 +63,30 @@ body {
     --title-3: calc(2rem / 1.2);
     --text-1:  calc(1.125rem / 1.2);
   }
+
+  body .page-wrapper {
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .page-wrapper .section-main {
+    width: 100%;
+  }
+
+  .cards-wrapper .card .card-footer {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+  }
+
+  .cards-wrapper .card .card-footer button {
+    width: 100%;
+  }
+
+  .page-wrapper .section-selected {
+    margin-top: 0;
+    width: 100%;
+  }
+
+
 }
